# omnitost

./: .gitignore  README.md  interpolation.mpy  interpolation.py  pyproject.toml  simulate.sh
docs/: Interpolation.md
lib/: interpolation.mpy
omnitost/: interpolation.py
