[tool.poetry]
name = "omnitost"
version = "0.1.0"
description = ""
authors = ["Letsric <riccibrief@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mypy = "^1.8.0"
pyright = "^1.1.350"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
